# django-tgbot

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README.rst  mkdocs.yml  setup.cfg
.github/: CONTRIBUTING.md
.github/workflows/: publish.yml
django_tgbot/: bot.py  bot_api_user.py  decorators.py  exceptions.py  models.py
django_tgbot/assistants/: createChatInviteLink.py
django_tgbot/management/: helpers.py
django_tgbot/management/bot_template/: __init__.py  bot.py  credentials.example.py  credentials.py  models.py  processors.py  urls.py  views.py
django_tgbot/management/bot_template/migrations/: 0001_initial.py  0002_auto_20201109_1648.py
django_tgbot/management/commands/: createtgbot.py  tgbottoken.py  tgbotwebhook.py
django_tgbot/state_manager/: message_types.py  state.py  state_manager.py  state_types.py  transition_condition.py  update_types.py
django_tgbot/types/: __init__.py  animation.py  audio.py  botcommand.py  callbackquery.py  chat.py  chatmember.py  chatpermissions.py  chatphoto.py  choseninlineresult.py  contact.py  dice.py  document.py  encryptedcredentials.py  encryptedpassportelement.py  file.py  forcereply.py  game.py  gamehighscore.py  inlinekeyboardbutton.py  inlinekeyboardmarkup.py  inlinequery.py  inlinequeryresult.py  inputmessagecontent.py  invoice.py  keyboardbutton.py  keyboardbuttonpolltype.py  labeledprice.py  location.py  loginurl.py  maskposition.py  message.py  messageentity.py  orderinfo.py  passportdata.py  passportfile.py  photosize.py  poll.py  pollanswer.py  polloption.py  (+17 more)
docs/: createtgbot.md  getting_updates.md  index.md  processors.md
docs/classes/: bot.md
docs/management_commands/: createtgbot.md  tgbottoken.md  tgbotwebhook.md
docs/models/: telegram_chat.md  telegram_state.md  telegram_user.md
docs/types/: README.md  message.md  replykeyboardmarkup.md  update.md
sampleproject/botdohkali_bot/: __init__.py  bot.py  models.py  processors.py  urls.py  views.py
sampleproject/config/: settings.py  urls.py
