[metadata]
name = django-tgbot
version = 1.0.2
description = A Django app to create Telegram bots.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.github.com/ARKhoshghalb/django-tgbot
author = Alireza Khoshghalb
author_email = alirezakhoshghalb@ymail.com
license = MIT License
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
install_requires =
  requests
